--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
 	"author": "Funes Darío",
 	"description": "This is a package for learning how to create and use NPM packages.",
 	"keywords": ["freecodecamp", "backend", "nodejs"],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"@freecodecamp/example": "1.1.0"
 	},
 	"main": "server.js",
 	"scripts": {
